<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#36598e"
    tools:context=".Past_Inde_tense">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.7"
        android:background="@drawable/sub_rounded"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/past_indef_tense1"
            android:gravity="center"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/past_indef_tense2"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/past_indef_tense3"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/past_indef_tense4"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    />




            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>