<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#36598e"
    android:gravity="center"
    android:weightSum="4"
    android:orientation="vertical"
    tools:context=".present_Indef_tense">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.7"
        android:background="@drawable/sub_rounded"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pre_indef_t"
            android:gravity="center"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pre_indef_desc"
                android:textSize="20sp"
                android:textIsSelectable="true"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pre_indef_desc1"
                android:textSize="20sp"
                android:textIsSelectable="true"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pre_indef_desc2"
                android:textSize="20sp"
                android:textIsSelectable="true"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                />




        </LinearLayout>
    </ScrollView>

    </LinearLayout>

</LinearLayout>